#4293 fixed overlaped text of add to cart

--- a/web/assets/css/step4-product-preview-css.css
+++ b/web/assets/css/step4-product-preview-css.css
@@ -135,12 +135,6 @@
     margin-left: 3%;
 }
 
-@media (min-width: 991px) {
-    .prod-add-to-cart-btn {
-        background-position: 16% center;
-    }
-}
-
 
 @media (min-width: 991px) and (max-width: 1200px) {
     .slideshow a {
